--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "page-replacement",
   "version": "0.1.0",
   "private": true,
+  "main": "main.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "electron .",
+    "distribution": "electron-packager . Simulador de paginacion"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -13,6 +16,7 @@
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
+    "@electron-forge/cli": "^6.0.0-beta.60",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -22,10 +26,13 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
+    "electron-builder": "^21.2.0",
+    "electron-packager": "^15.3.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
+    "electron": "^14.0.0",
     "typescript": "~4.1.5"
   }
 }
